--- a/index.html
+++ b/index.html
@@ -15,58 +15,116 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <!-- Header -->
-    <section id="header" class="section section__container">
-      <img class="header__title" src="img/title-image.png" />
-    </section>
-    <!-- Navbar -->
-    <section id="navbar" class="section section__container">
-      <ul class="navbar__menu">
-        <li class="menu">
-          <button><i class="fas fa-beer"></i><span class="menu__text">Today's Top Topic</span></button>
-        </li>
-        <li class="menu">
-          <button><i class="fas fa-random"></i><span class="menu__text">Random Dialogue</span></button>
-        </li>
-        <li class="menu">
-          <button><i class="fas fa-calendar-alt"></i><span class="menu__text">Upcomming Matches</span></button>
-        </li>
-      </ul>
-    </section>
-    <!-- Chatbox -->
-    <section id="chatbox" class="section section__container">
-      <div class="chat">
-        <img src="img/avatar1.png" alt="chat-avatar" class="chat__avatar" />
-        <div class="chat__speechbubble">
-          <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-          <i class="fas fa-volume-up"></i>
+    <div class="wrapper">
+      <!-- Header -->
+      <section id="header" class="section section__container">
+        <div class="section__container">
+          <img class="header__title" src="img/title-image.png" />
         </div>
-      </div>
-      <div class="chat">
-        <img src="img/avatar2.png" alt="chat-avatar" class="chat__avatar" />
-        <div class="chat__speechbubble">
-          <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-          <i class="fas fa-volume-up"></i>
+      </section>
+      <!-- Navbar -->
+      <section id="navbar" class="section">
+        <div class="section__container">
+          <ul class="navbar__menu">
+            <li class="menu">
+              <button><i class="fas fa-beer"></i><span class="menu__text">Today's Top Topic</span></button>
+            </li>
+            <li class="menu">
+              <button><i class="fas fa-random"></i><span class="menu__text">Random Dialogue</span></button>
+            </li>
+            <li class="menu">
+              <button><i class="fas fa-calendar-alt"></i><span class="menu__text">Upcomming Matches</span></button>
+            </li>
+            <li class="menu">
+              <button><i class="fas fa-comment"></i><span class="menu__text">Forum</span></button>
+            </li>
+          </ul>
         </div>
-      </div>
-      <div class="chat">
-        <img src="img/avatar1.png" alt="chat-avatar" class="chat__avatar" />
-        <div class="chat__speechbubble">
-          <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-          <i class="fas fa-volume-up"></i>
+      </section>
+      <section id="chatbox" class="section section__container">
+        <div class="chat__top">
+          <i class="fas fa-info-circle"></i>
+          <i class="fas fa-adjust"></i>
+          <i class="far fa-times-circle"></i>
         </div>
-      </div>
-      <div class="chat">
-        <img src="img/avatar2.png" alt="chat-avatar" class="chat__avatar" />
-        <div class="chat__speechbubble">
-          <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-          <i class="fas fa-volume-up"></i>
+
+        <div class="chat__container">
+          <div class="chat first-chat">
+            <img src="img/avatar1.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
+          <div class="chat">
+            <img src="img/avatar2.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
+          <div class="chat">
+            <img src="img/avatar1.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
+          <div class="chat">
+            <img src="img/avatar2.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
+          <div class="chat">
+            <img src="img/avatar1.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
+          <div class="chat">
+            <img src="img/avatar2.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
+          <div class="chat">
+            <img src="img/avatar1.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
+          <div class="chat">
+            <img src="img/avatar2.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
+          <div class="chat">
+            <img src="img/avatar1.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
+          <div class="chat last-chat">
+            <img src="img/avatar2.png" alt="chat-avatar" class="chat__avatar" />
+            <div class="chat__speechbubble">
+              <p class="chat__text">Lorem ipsum dolor sit amet consfectetur adipisicing.</p>
+              <i class="fas fa-volume-up"></i>
+            </div>
+          </div>
         </div>
-      </div>
-    </section>
-    <!-- Footer -->
-    <section id="footer" class="section section__container">
-      <p class="footer__text">Copyright © 2021 TalkBall. All rights reserved.</p>
-    </section>
+      </section>
+      <!-- Footer -->
+      <section id="footer" class="section section__container">
+        <p class="footer__text">Copyright © 2021 TalkBall. All rights reserved.</p>
+      </section>
+    </div>
   </body>
 </html>
