--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <div class="wrapper">
+    
       <!-- Header -->
       <section id="header" class="section section__container">
         <div class="section__container">
+          <img src="img/title-logo.png" class="header__logo" />
           <img class="header__title" src="img/title-image.png" />
         </div>
       </section>
@@ -27,13 +28,13 @@
         <div class="section__container">
           <ul class="navbar__menu">
             <li class="menu">
-              <button><i class="fas fa-beer"></i><span class="menu__text">Today's Top Topic</span></button>
+              <button><i class="fas fa-beer"></i><span class="menu__text">Today's Top Talk</span></button>
             </li>
             <li class="menu">
-              <button><i class="fas fa-random"></i><span class="menu__text">Random Dialogue</span></button>
+              <button><i class="fas fa-random"></i><span class="menu__text">Random Talk</span></button>
             </li>
             <li class="menu">
-              <button><i class="fas fa-calendar-alt"></i><span class="menu__text">Upcomming Matches</span></button>
+              <button><i class="fas fa-calendar-alt"></i><span class="menu__text">Match Schedules</span></button>
             </li>
             <li class="menu">
               <button><i class="fas fa-comment"></i><span class="menu__text">Forum</span></button>
@@ -42,12 +43,6 @@
         </div>
       </section>
       <section id="chatbox" class="section section__container">
-        <div class="chat__top">
-          <i class="fas fa-info-circle"></i>
-          <i class="fas fa-adjust"></i>
-          <i class="far fa-times-circle"></i>
-        </div>
-
         <div class="chat__container">
           <div class="chat first-chat">
             <img src="img/avatar1.png" alt="chat-avatar" class="chat__avatar" />
@@ -125,6 +120,6 @@
       <section id="footer" class="section section__container">
         <p class="footer__text">Copyright © 2021 TalkBall. All rights reserved.</p>
       </section>
-    </div>
+    
   </body>
 </html>
