--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="chat__top">
       <i class="fas fa-times-circle"></i>
       <i class="fas fa-minus-circle"></i>
-      <i class="fas fa-info-circle"></i>
+      <i class="fas fa-moon darkMode"></i>
     </div>
     <div class="chat__container">
       <div class="chat first-chat">
