CSS: Logo size modification

--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
 		<!-- Header -->
 		<section id="header">
 			<div class="header__container">
-				<div class="header__logo">
-					<img src="img/title-logo.png" />
-				</div>
-				<img class="header__title" src="img/title-image.png" />
+				<img src="img/title-logo.png" id="header__logo" />
+				<img src="img/title-image.png" id="header__title"/>
 			</div>
 		</section>
 
