--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Talk Ball</title>
 		<meta name="description" content="Football things, Football phrases" />
-		<link rel="icon" href="img/favicon.png?" type="image/png" />
+		<link rel="icon" href="img/favicon.png" type="image/png" />
 		<script
 			src="https://kit.fontawesome.com/bce1a98f73.js"
 			crossorigin="anonymous"
@@ -18,6 +18,12 @@
 		/>
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+			crossorigin="anonymous"
+		/>
 		<script src="main.js" defer></script>
 	</head>
 
@@ -26,7 +32,7 @@
 		<section id="header">
 			<div class="header__container">
 				<img src="img/title-logo.png" id="header__logo" />
-				<img src="img/title-image.png" id="header__title"/>
+				<img src="img/title-image.png" id="header__title" />
 			</div>
 		</section>
 
@@ -40,7 +46,11 @@
 					</button>
 				</li>
 				<li class="menu">
-					<button>
+					<button
+						type="button"
+						data-bs-toggle="modal"
+						data-bs-target="#exampleModal"
+					>
 						<i class="fas fa-random"></i
 						><span class="menu__text">Random Talk</span>
 					</button>
@@ -48,7 +58,7 @@
 				<li class="menu">
 					<button>
 						<i class="fas fa-calendar-alt"></i
-						><span class="menu__text">Match Schedules</span>
+						><span class="menu__text">Topic's Talk</span>
 					</button>
 				</li>
 				<li class="menu">
@@ -113,11 +123,59 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- Modal -->
+		<div
+			class="modal fade"
+			id="exampleModal"
+			tabindex="-1"
+			aria-labelledby="exampleModalLabel"
+			aria-hidden="true"
+		>
+			<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Random Talk</h5>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="modal"
+							aria-label="Close"
+						></button>
+					</div>
+					<div class="modal-body" id="modal__body">
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, hic debitis, neque explicabo vitae consequatur laborum sit at, voluptatem tempore sint nihil? Culpa officiis at in earum consequuntur unde dignissimos.
+					</div>
+					<div class="modal-footer">
+						<button
+							type="button"
+							class="btn btn-secondary"
+							data-bs-dismiss="modal"
+						>
+							Close
+						</button>
+						<button type="button" class="btn btn-success">Show me more</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<!-- Footer -->
 		<section id="footer">
 			<p class="footer__text">
 				Copyright © 2021 TalkBall. All rights reserved.
 			</p>
 		</section>
+
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+			integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+			integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
